Import og eksport
- La til import og eksport funksjonalitet
- Forbedret feilhåndtering
- Refaktorerte slik at application lag kun bruker domain lag
